@@ -21,7 +21,7 @@ import java.util.Map;
 import java.util.Set;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
+
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Test;
@@ -162,7 +162,7 @@ public class ExternalIdentityRefTest {
             @NotNull
             @Override
             public Map<String, ?> getProperties() {
-                return ImmutableMap.of();
+                return Map.of();
             }
         }));
     }
