@@ -17,9 +17,7 @@
 package org.apache.jackrabbit.oak.spi.security.authentication.external.basic;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
@@ -53,6 +51,7 @@ import java.io.ByteArrayInputStream;
 import java.math.BigDecimal;
 import java.security.Principal;
 import java.text.Normalizer;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collection;
@@ -1057,7 +1056,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
         ExternalUser externalUser = idp.getUser(TestIdentityProvider.ID_SECOND_USER);
         Authorizable a = syncCtx.createUser(externalUser);
 
-        syncCtx.syncProperties(externalUser, a, ImmutableMap.of());
+        syncCtx.syncProperties(externalUser, a, Map.of());
 
         for (String propName : externalUser.getProperties().keySet()) {
             assertFalse(a.hasProperty(propName));
@@ -1076,7 +1075,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
             a.setProperty(propName, anyValue);
         }
 
-        syncCtx.syncProperties(externalUser, a, ImmutableMap.of());
+        syncCtx.syncProperties(externalUser, a, Map.of());
         for (String propName : extProps.keySet()) {
             assertTrue(a.hasProperty(propName));
             assertEquals(anyValue, a.getProperty(propName)[0]);
@@ -1459,7 +1458,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
 
     @Test
     public void testCreateValuesSkipsNull() throws Exception {
-        List<String> strings = Lists.newArrayList("s", null, null, "t");
+        List<String> strings = new ArrayList<>(Arrays.asList("s", null, null, "t"));
         Value[] vs = syncCtx.createValues(strings);
         assertNotNull(vs);
         assertEquals(2, vs.length);
