@@ -28,8 +28,6 @@ import javax.jcr.security.AccessControlManager;
 import javax.jcr.security.AccessControlPolicy;
 import javax.jcr.security.AccessControlPolicyIterator;
 
-import org.apache.jackrabbit.guava.common.base.Preconditions;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Group;
@@ -42,6 +40,7 @@ import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.conditions.Validate;
 import org.apache.jackrabbit.oak.plugins.tree.RootProvider;
 import org.apache.jackrabbit.oak.plugins.tree.TreeUtil;
 import org.apache.jackrabbit.oak.spi.nodetype.NodeTypeConstants;
@@ -180,7 +179,7 @@ public abstract class AbstractCugTest extends AbstractSecurityTest implements Cu
         // - /content/aa/bb : allow testGroup, deny everyone
         // - /content/a/b/c : allow everyone,  deny testGroup (isolated)
         // - /content2      : allow everyone,  deny testGroup (isolated)
-        Map<String, Principal> m = ImmutableMap.of(
+        Map<String, Principal> m = Map.of(
                 "/content/a", testGroupPrincipal,
                 "/content/aa/bb", testGroupPrincipal,
                 "/content/a/b/c", EveryonePrincipal.getInstance(),
@@ -224,7 +223,7 @@ public abstract class AbstractCugTest extends AbstractSecurityTest implements Cu
 
     static void createCug(@NotNull Root root, @NotNull String path, @NotNull String principalName) throws RepositoryException {
         Tree tree = root.getTree(path);
-        Preconditions.checkState(tree.exists());
+        Validate.checkState(tree.exists());
 
         TreeUtil.addMixin(tree, MIX_REP_CUG_MIXIN, root.getTree(NODE_TYPES_PATH), null);
         TreeUtil.addChild(tree, REP_CUG_POLICY, NT_REP_CUG_POLICY).setProperty(REP_PRINCIPAL_NAMES, Set.of(principalName), Type.STRINGS);
