@@ -18,7 +18,7 @@
  */
 package org.apache.jackrabbit.oak.plugins.index;
 
-import static org.apache.jackrabbit.guava.common.base.Preconditions.checkArgument;
+import static org.apache.jackrabbit.oak.commons.conditions.Validate.checkArgument;
 import static java.util.Objects.requireNonNull;
 import static org.apache.jackrabbit.guava.common.base.Throwables.getStackTraceAsString;
 import static org.apache.jackrabbit.oak.api.jmx.IndexStatsMBean.STATUS_DONE;
@@ -28,6 +28,7 @@ import static org.apache.jackrabbit.oak.plugins.index.IndexConstants.REINDEX_PRO
 import static org.apache.jackrabbit.oak.plugins.memory.EmptyNodeState.MISSING_NODE;
 
 import java.io.Closeable;
+import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.HashSet;
@@ -49,7 +50,6 @@ import javax.management.openmbean.SimpleType;
 import javax.management.openmbean.TabularData;
 
 import com.codahale.metrics.MetricRegistry;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.api.stats.TimeSeries;
 import org.apache.jackrabbit.oak.api.CommitFailedException;
 import org.apache.jackrabbit.oak.api.PropertyState;
@@ -100,7 +100,6 @@ import org.slf4j.LoggerFactory;
 
 import org.apache.jackrabbit.guava.common.base.Splitter;
 import org.apache.jackrabbit.guava.common.base.Stopwatch;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 
 public class AsyncIndexUpdate implements Runnable, Closeable {
     /**
@@ -570,7 +569,7 @@ public class AsyncIndexUpdate implements Runnable, Closeable {
         String afterTime = now();
         String oldThreadName = Thread.currentThread().getName();
         boolean threadNameChanged = false;
-        String afterCheckpoint = store.checkpoint(lifetime, ImmutableMap.of(
+        String afterCheckpoint = store.checkpoint(lifetime, Map.of(
                 "creator", AsyncIndexUpdate.class.getSimpleName(),
                 "created", afterTime,
                 "thread", oldThreadName,
@@ -807,7 +806,7 @@ public class AsyncIndexUpdate implements Runnable, Closeable {
             markFailingIndexesAsCorrupt(builder);
 
             CommitInfo info = new CommitInfo(CommitInfo.OAK_UNKNOWN, CommitInfo.OAK_UNKNOWN,
-                    ImmutableMap.of(IndexConstants.CHECKPOINT_CREATION_TIME, afterTime));
+                    Map.of(IndexConstants.CHECKPOINT_CREATION_TIME, afterTime));
             indexUpdate =
                     new IndexUpdate(provider, name, after, builder, callback, callback, info, corruptIndexHandler)
                             .withMissingProviderStrategy(missingStrategy);
@@ -939,7 +938,7 @@ public class AsyncIndexUpdate implements Runnable, Closeable {
                 }
             }
         };
-        List<EditorProvider> editorProviders = Lists.newArrayList();
+        List<EditorProvider> editorProviders = new ArrayList<>();
         editorProviders.add(new ConflictValidatorProvider());
         editorProviders.addAll(validatorProviders);
         CompositeHook hooks = new CompositeHook(
@@ -960,7 +959,7 @@ public class AsyncIndexUpdate implements Runnable, Closeable {
     }
 
     private static CommitInfo createCommitInfo() {
-        Map<String, Object> info = ImmutableMap.<String, Object>of(CommitContext.NAME, new SimpleCommitContext());
+        Map<String, Object> info = Map.of(CommitContext.NAME, new SimpleCommitContext());
         return new CommitInfo(CommitInfo.OAK_UNKNOWN, CommitInfo.OAK_UNKNOWN, info);
     }
 
