@@ -16,11 +16,11 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.jackrabbit.oak.plugins.index.lucene;
 
 import java.io.File;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Dictionary;
 import java.util.Hashtable;
 import java.util.List;
@@ -33,8 +33,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import org.apache.jackrabbit.guava.common.base.Strings;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.Lists;
+
 import org.apache.commons.io.FilenameUtils;
 import org.apache.felix.scr.annotations.Activate;
 import org.apache.felix.scr.annotations.Component;
@@ -106,12 +105,13 @@ import static org.apache.jackrabbit.oak.spi.whiteboard.WhiteboardUtils.scheduleW
 @SuppressWarnings("UnusedDeclaration")
 @Component(metatype = true, label = "Apache Jackrabbit Oak LuceneIndexProvider")
 public class LuceneIndexProviderService {
+
     public static final String REPOSITORY_HOME = "repository.home";
 
     private LuceneIndexProvider indexProvider;
 
-    private final List<ServiceRegistration> regs = Lists.newArrayList();
-    private final List<Registration> oakRegs = Lists.newArrayList();
+    private final List<ServiceRegistration> regs = new ArrayList<>();
+    private final List<Registration> oakRegs = new ArrayList<>();
 
     private final Logger log = LoggerFactory.getLogger(getClass());
 
@@ -820,13 +820,13 @@ public class LuceneIndexProviderService {
             log.info("PropertyIndexCleaner configured to perform recursive delete");
         }
         oakRegs.add(scheduleWithFixedDelay(whiteboard, cleaner,
-                ImmutableMap.of("scheduler.name", PropertyIndexCleaner.class.getName()),
+                Map.of("scheduler.name", PropertyIndexCleaner.class.getName()),
                 cleanerInterval, true, true));
         log.info("Property index cleaner configured to run every [{}] seconds", cleanerInterval);
     }
 
     private void registerLuceneFileSystemStats(LuceneIndexFileSystemStatistics luceneIndexFSStats, long delayInSeconds) {
-        Map<String, Object> config = ImmutableMap.of(
+        Map<String, Object> config = Map.of(
                 "scheduler.name", LuceneIndexFileSystemStatistics.class.getName()
         );
         oakRegs.add(scheduleWithFixedDelay(whiteboard, luceneIndexFSStats, config, delayInSeconds, false, true));
