@@ -26,7 +26,7 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
+
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.oak.commons.PropertiesUtil;
 import org.jetbrains.annotations.NotNull;
@@ -154,7 +154,7 @@ public final class ConfigurationParameters implements Map<String, Object> {
      */
     @NotNull
     public static ConfigurationParameters of(@NotNull String key, @NotNull Object value) {
-        return new ConfigurationParameters(ImmutableMap.of(key, value));
+        return new ConfigurationParameters(Map.of(key, value));
     }
 
     /**
@@ -170,7 +170,7 @@ public final class ConfigurationParameters implements Map<String, Object> {
     @NotNull
     public static ConfigurationParameters of(@NotNull String key1, @NotNull Object value1,
                                              @NotNull String key2, @NotNull Object value2) {
-        return new ConfigurationParameters(ImmutableMap.of(key1, value1, key2, value2));
+        return new ConfigurationParameters(Map.of(key1, value1, key2, value2));
     }
 
     /**
