@@ -16,12 +16,10 @@
  */
 package org.apache.jackrabbit.oak.upgrade;
 
-import static org.apache.jackrabbit.guava.common.base.Preconditions.checkArgument;
+import static org.apache.jackrabbit.oak.commons.conditions.Validate.checkArgument;
 import static java.util.Objects.requireNonNull;
-import static org.apache.jackrabbit.guava.common.base.Preconditions.checkState;
 import static org.apache.jackrabbit.guava.common.collect.Iterables.addAll;
 
-import static org.apache.jackrabbit.guava.common.collect.Maps.newLinkedHashMap;
 import static org.apache.jackrabbit.JcrConstants.JCR_FROZENMIXINTYPES;
 import static org.apache.jackrabbit.JcrConstants.JCR_FROZENPRIMARYTYPE;
 import static org.apache.jackrabbit.JcrConstants.JCR_FROZENUUID;
@@ -60,7 +58,6 @@ import javax.jcr.PropertyType;
 import javax.jcr.RepositoryException;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.api.ReferenceBinary;
 import org.apache.jackrabbit.core.RepositoryContext;
 import org.apache.jackrabbit.core.id.NodeId;
@@ -74,6 +71,7 @@ import org.apache.jackrabbit.oak.api.Blob;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.conditions.Validate;
 import org.apache.jackrabbit.oak.plugins.memory.AbstractBlob;
 import org.apache.jackrabbit.oak.plugins.memory.EmptyNodeState;
 import org.apache.jackrabbit.oak.plugins.memory.MemoryChildNodeEntry;
@@ -150,7 +148,7 @@ class JackrabbitNodeState extends AbstractNodeState {
             boolean skipOnError
     ) throws RepositoryException {
 
-        final Map<NodeId, JackrabbitNodeState> emptyMountPoints = ImmutableMap.of();
+        final Map<NodeId, JackrabbitNodeState> emptyMountPoints = Map.of();
         final PersistenceManager versionPM = context.getInternalVersionManager().getPersistenceManager();
         final JackrabbitNodeState versionStorage = new JackrabbitNodeState(
                 versionPM, root, uriToPrefix,
@@ -172,7 +170,7 @@ class JackrabbitNodeState extends AbstractNodeState {
 
 
         PersistenceManager pm = context.getWorkspaceInfo(workspaceName).getPersistenceManager();
-        final Map<NodeId, JackrabbitNodeState> mountPoints = ImmutableMap.of(
+        final Map<NodeId, JackrabbitNodeState> mountPoints = Map.of(
                 VERSION_STORAGE_NODE_ID, versionStorage,
                 ACTIVITIES_NODE_ID, activities
         );
@@ -327,7 +325,7 @@ class JackrabbitNodeState extends AbstractNodeState {
     private JackrabbitNodeState createChildNodeState(NodeId id, String name) {
         if (mountPoints.containsKey(id)) {
             final JackrabbitNodeState nodeState = mountPoints.get(id);
-            checkState(name.equals(nodeState.name),
+            Validate.checkState(name.equals(nodeState.name),
                     "Expected mounted node " + id + " to be called " + nodeState.name +
                             " instead of " + name);
             nodeState.parent = this;
@@ -365,7 +363,7 @@ class JackrabbitNodeState extends AbstractNodeState {
     }
 
     private Map<String, NodeId> createNodes(NodePropBundle bundle) {
-        Map<String, NodeId> children = newLinkedHashMap();
+        Map<String, NodeId> children = new LinkedHashMap<>();
         for (ChildNodeEntry entry : bundle.getChildNodeEntries()) {
             String base = createName(entry.getName());
             String name = base;
